--- a/portfolio/src/components/home/home.css
+++ b/portfolio/src/components/home/home.css
@@ -55,7 +55,7 @@
 }
 
 .home__img {
-  background: url(../../assets/profile.jpg);
+  background: url(../../assets/milan.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
