--- a/portfolio/src/components/header/header.css
+++ b/portfolio/src/components/header/header.css
@@ -48,6 +48,11 @@
   color: var(--title-color-dark);
 }
 
+/* Change background header*/
+.scroll-header {
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
+
 /*breakpoint*/
 /* For medium device*/
 @media screen and (max-width: 768px) {
